# ct_ray_sim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  shell.nix
include/: DensityMap.hpp  PostProcessing.hpp  Ray.hpp  RayTracer.hpp  Simulation.hpp  SimulationResult.hpp  ct_sim.h
scripts/: bootstrap.bat  bootstrap.ps1  bootstrap.sh
scripts/resources/fromSource/: CMakeLists.txt  c_cpp_properties.json
scripts/resources/nix/: CMakeLists.txt  shell.nix
scripts/resources/vcpkg/: CMakeLists.txt  c_cpp_properties.json
src/: DensityMap.cpp  Main.cpp  PostProcessing.cpp  Ray.cpp  RayTracer.cpp  Simulation.cpp  SimulationResult.cpp  ct_sim.cpp  main.cpp
